--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,4 @@ JWT_SECRET=your-jwt-secret
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 PORT=3001
+GEMINI_API_KEY=your-gemini-api-key
